@@ -7,9 +7,11 @@ import org.kairev0.Utils.Utils;
 
 import java.util.*;
 
+import static org.kairev0.Utils.Utils.scanner;
+
 public class GameService {
     private Random rand = new Random();
-    private final Game game;
+    private Game game;
     private List<Player> round;
 
     public GameService(Player thisPlayer, Player opponentPlayer) {
@@ -25,25 +27,11 @@ public class GameService {
     // 5. Поменять первого игрока со вторым местами
     // 6. Провести второй раунд
 
-    public void startGame() {
-        Player first = round.getFirst();
-        Player second = round.getLast();
+    public Player startGame() {
+        Player first = round.get(0);
+        Player second = round.get(1);
         first.setTeam(1);
         second.setTeam(2);
-        int[][] field = game.getField();
-        gameCycle(field, first, second);
-        game.reloadField();
-        field = game.getField();
-        gameCycle(field, second, first);
-        game.reloadField();
-        field = game.getField();
-        round.set(0, first);
-        round.set(1, second);
-        Collections.shuffle(round);
-        gameCycle(field, round.getFirst(), round.getLast());
-    }
-
-    public void temp() {
         int firstPlayerWinsOfRounds = 0, secondPlayerWinsOfRounds = 0;
         int[][] field = game.getField();
         int winnerOfRound = gameCycle(field, first, second);
@@ -69,6 +57,9 @@ public class GameService {
         if (firstPlayerWinsOfRounds == secondPlayerWinsOfRounds) {
             game.reloadField();
             field = game.getField();
+            /*round.set(0, first);
+            round.set(1, second);
+            Collections.shuffle(round);*/
             winnerOfRound = gameCycle(field, first, second);
             if (winnerOfRound == 1) {
                 System.out.printf("%s wins!\n", first.getName());
@@ -80,25 +71,9 @@ public class GameService {
             System.out.println(firstPlayerWinsOfRounds + "/" + secondPlayerWinsOfRounds);
         }
         if (firstPlayerWinsOfRounds > secondPlayerWinsOfRounds) {
-            if (first.equals(thisPlayer)) {
-                System.out.println("Congratulations! You win!");
-                thisPlayer.win();
-                opponent.fail();
-            } else {
-                System.out.println("Congratulations! You lose!");
-                thisPlayer.fail();
-                opponent.win();
-            }
+            return first;
         } else {
-            if (second.equals(thisPlayer)) {
-                System.out.println("Congratulations! You win!");
-                thisPlayer.win();
-                opponent.fail();
-            } else {
-                System.out.println("Congratulations! You lose!");
-                thisPlayer.fail();
-                opponent.win();
-            }
+            return second;
         }
     }
 
@@ -169,5 +144,268 @@ public class GameService {
                             field[2][0] == 2 && field[2][0] == field[1][1] && field[1][1] == field[0][2];
         }
         return false;
+    }
+
+    private void check(Object expected, Object actual) {
+        if (!Objects.deepEquals(expected, actual)) {
+            System.out.println("[FAIL]");
+            throw new AssertionError("Expected " + expected + ", but found " + actual);
+        }
+    }
+
+    public void isWinTest() {
+        /* --- EMPTY --- */
+        int[][] field = new int[3][3];
+        check(false, isWin(field, 1));
+
+        /* --- WIN TEAM 1 --- */
+        field = new int[][]{
+                new int[]{1, 0, 0},
+                new int[]{1, 0, 0},
+                new int[]{1, 0, 0}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 1, 0},
+                new int[]{0, 1, 0},
+                new int[]{0, 1, 0}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 1},
+                new int[]{0, 0, 1},
+                new int[]{0, 0, 1}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{1, 1, 1},
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{1, 1, 1},
+                new int[]{0, 0, 0}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0},
+                new int[]{1, 1, 1}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 1},
+                new int[]{0, 1, 0},
+                new int[]{1, 0, 0}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{1, 0, 0},
+                new int[]{0, 1, 0},
+                new int[]{0, 0, 1}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{1, 0, 1},
+                new int[]{0, 1, 0},
+                new int[]{2, 2, 2}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{1, 0, 2},
+                new int[]{0, 1, 2},
+                new int[]{1, 0, 2}
+        };
+        check(false, isWin(field, 1));
+
+        /* --- FAIL TEAM 1 --- */
+        field = new int[][]{
+                new int[]{2, 0, 0},
+                new int[]{2, 0, 0},
+                new int[]{2, 0, 0}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 2, 0},
+                new int[]{0, 2, 0},
+                new int[]{0, 2, 0}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 2},
+                new int[]{0, 0, 2},
+                new int[]{0, 0, 2}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{2, 2, 2},
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{2, 2, 2},
+                new int[]{0, 0, 0}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0},
+                new int[]{2, 2, 2}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{0, 0, 2},
+                new int[]{0, 2, 0},
+                new int[]{2, 0, 0}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{2, 0, 0},
+                new int[]{0, 2, 0},
+                new int[]{0, 0, 2}
+        };
+        check(false, isWin(field, 1));
+        field = new int[][]{
+                new int[]{2, 0, 2},
+                new int[]{0, 2, 0},
+                new int[]{1, 1, 1}
+        };
+        check(true, isWin(field, 1));
+        field = new int[][]{
+                new int[]{2, 0, 1},
+                new int[]{0, 2, 1},
+                new int[]{2, 0, 1}
+        };
+        check(true, isWin(field, 1));
+
+        /* --- FAIL TEAM 2 --- */
+        field = new int[][]{
+                new int[]{1, 0, 0},
+                new int[]{1, 0, 0},
+                new int[]{1, 0, 0}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 1, 0},
+                new int[]{0, 1, 0},
+                new int[]{0, 1, 0}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 1},
+                new int[]{0, 0, 1},
+                new int[]{0, 0, 1}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{1, 1, 1},
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{1, 1, 1},
+                new int[]{0, 0, 0}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0},
+                new int[]{1, 1, 1}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 1},
+                new int[]{0, 1, 0},
+                new int[]{1, 0, 0}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{1, 0, 0},
+                new int[]{0, 1, 0},
+                new int[]{0, 0, 1}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{1, 0, 1},
+                new int[]{0, 1, 0},
+                new int[]{2, 2, 2}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{1, 0, 2},
+                new int[]{0, 1, 2},
+                new int[]{1, 0, 2}
+        };
+        check(true, isWin(field, 2));
+
+        /* --- WIN TEAM 2 --- */
+        field = new int[][]{
+                new int[]{2, 0, 0},
+                new int[]{2, 0, 0},
+                new int[]{2, 0, 0}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 2, 0},
+                new int[]{0, 2, 0},
+                new int[]{0, 2, 0}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 2},
+                new int[]{0, 0, 2},
+                new int[]{0, 0, 2}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{2, 2, 2},
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{2, 2, 2},
+                new int[]{0, 0, 0}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 0},
+                new int[]{0, 0, 0},
+                new int[]{2, 2, 2}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{0, 0, 2},
+                new int[]{0, 2, 0},
+                new int[]{2, 0, 0}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{2, 0, 0},
+                new int[]{0, 2, 0},
+                new int[]{0, 0, 2}
+        };
+        check(true, isWin(field, 2));
+        field = new int[][]{
+                new int[]{2, 0, 2},
+                new int[]{0, 2, 0},
+                new int[]{1, 1, 1}
+        };
+        check(false, isWin(field, 2));
+        field = new int[][]{
+                new int[]{2, 0, 1},
+                new int[]{0, 2, 1},
+                new int[]{2, 0, 1}
+        };
+        check(false, isWin(field, 2));
+
+        System.out.println("All tests passed");
     }
 }
